--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "cash-healer",
   "version": "1.0.0",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "scripts": {
-    "build": "mastra build",
-    "start": "node dist/index.mjs",
+    "prestart": "npm run build",
+    "build": "rm -rf dist && mastra build",
+    "start": "NODE_ENV=production node dist/index.mjs",
     "dev": "mastra dev",
-    "check": "tsc",
+    "check": "tsc --noEmit",
     "migrate": "drizzle-kit migrate"
+    "test:build": "npm run build && ls -la dist/"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.24",
