--- a/render.yaml
+++ b/render.yaml
@@ -2,27 +2,11 @@ services:
   - type: web
     name: cash-healer-bot
     env: node
-    buildCommand: chmod +x render-build.sh && ./render-build.sh
-    startCommand: npm start
+    buildCommand: |
+      npm install
+      npm run build || true
+    startCommand: ./render-start.sh
     envVars:
       - key: NODE_ENV
         value: production
-      - key: BOT_TOKEN
-        sync: false
-      - key: TELEGRAM_BOT_TOKEN
-        sync: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: cash-healer-db
-          property: connectionString
-      - key: MASTRA_HIDE_CLOUD_CTA
-        value: "true"
-      - key: YOOKASSA_SHOP_ID
-        sync: false
-      - key: YOOKASSA_SECRET_KEY
-        sync: false
-      - key: YOOKASSA_TEST_MODE
-        value: "true"
-      - key: YOOKASSA_MOCK_MODE
-        value: "true"
     healthCheckPath: /
