--- a/package.json
+++ b/package.json
@@ -4,49 +4,27 @@
   "type": "module",
   "main": "dist/index.mjs",
   "scripts": {
-    "prestart": "npm run build",
-    "build": "rm -rf dist && mastra build",
-    "start": "NODE_ENV=production node dist/index.mjs",
+    "build": "mastra build",
+    "start": "node index.js",
     "dev": "mastra dev",
-    "check": "tsc --noEmit",
-    "migrate": "drizzle-kit migrate",
-    "test:build": "npm run build && ls -la dist/"
+    "check": "tsc --noEmit"
+  },
+  "engines": {
+    "node": ">=20.9.0"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.24",
-    "@inngest/realtime": "^0.3.1",
     "@mastra/core": "^0.20.0",
-    "@mastra/inngest": "^0.16.0",
-    "@mastra/libsql": "^0.15.1",
-    "@mastra/loggers": "^0.10.15",
-    "@mastra/mcp": "^0.13.3",
-    "@mastra/memory": "^0.15.5",
     "@mastra/pg": "^0.17.1",
-    "@openrouter/ai-sdk-provider": "^0.4.6",
-    "@slack/web-api": "^7.9.3",
-    "@types/node-telegram-bot-api": "^0.64.12",
-    "@types/pg": "^8.15.5",
-    "ai": "^4.3.16",
-    "dotenv": "^17.2.0",
-    "drizzle-kit": "^0.31.7",
-    "drizzle-orm": "^0.44.7",
-    "exa-js": "^1.8.17",
-    "inngest": "^3.40.2",
-    "inngest-cli": "^1.11.5",
     "node-telegram-bot-api": "^0.66.0",
-    "openai": "^6.9.1",
-    "pino": "^9.9.4",
-    "tsx": "^4.20.3",
-    "zod": "^3.25.76"
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.7",
+    "express": "^4.18.2",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
     "mastra": "^0.14.0",
-    "prettier": "^3.6.2",
-    "ts-node": "^10.9.1",
     "typescript": "^5.9.3"
-  },
-  "engines": {
-    "node": ">=20.9.0"
   }
 }
