--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "main": "dist/index.mjs",
   "scripts": {
-    "build": "mastra build",
-    "start": "node index.js",
+    "build": "rm -rf dist && mastra build",
+    "start": "node dist/index.mjs",
     "dev": "mastra dev",
-    "check": "tsc --noEmit"
+    "railway:setup": "npm install && npm run build"
   },
   "engines": {
     "node": ">=20.9.0"
@@ -20,7 +20,8 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.7",
     "express": "^4.18.2",
-    "telegraf": "^4.16.3"
+    "pino": "^9.9.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
